--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="./pages/T.O.S.html ">t.o.s</a>
               </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown link
                 </a>
@@ -41,7 +41,7 @@
                   <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
