--- a/pages/T.O.S.html
+++ b/pages/T.O.S.html
@@ -3,12 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>TermsAndConditions</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body id="bodytos">
     <!-- HEADER CORTITO Y FACIL -->
-    <header id="tosscroll"> 
+    <header> 
+        <nav class="navbar navbar-expand-lg nav-colorback">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse nav-align" id="navbarNavDropdown" >
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contacts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/prices.html">prices</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/aboutme.html">aboutme</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="T.O.S.html">t.o.s</a>
+                  </li>
+                  <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown link
+                    </a> -->
+                    <!-- <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul> -->
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         <h1 class="colortitle">Terms and Conditions</h1>
     </header> <hr class="tos1">
     <!-- INICIO MAIN -->
@@ -45,13 +82,37 @@
         </ul>
     </main> <hr>
     <!-- FIN MAIN / FOOTER SIMPLE -->
-    <footer class="homeboton1">
+    <footer class="pie-pagina homeboton1">
+        <div class="grupo-1">
+           <div class="box">
+           </div>
+           <div class="box">
+               <h2>about me</h2>
+               <p>Are you a beginner in digital illustration?if you want advice from my experience to start drawin<a class="rgbindex" href="">click here</a></p>
+               <p>Do you want us to collaborate togheter? <a class="rgbindex" href="">click here</a> for more information</p>
+           </div>
+           <div class="box">
+               <h2>Follow me!</h2>
+               <div class="red-social">
+                   <a href="" class="logos-footer"><img class="logos-footer"s src="../multimedia/img-contacto/gmaillogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Instagramlogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Xlogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Whatssapplogo.png" alt=""></a>
+               </div>
+           </div>
+         </div>
+         <div class="grupo-2">
+           <small>&copy; 2021 <b>ArteJulietta</b> - Todos los Derechos Reservados.</small>
+         </div>
         <!-- scroll up -->
-      <div class="homeboton1">
+      <!-- <section>
+       <div class="homeboton1">
          <a  href="#tosscroll"><img class="scrollboton" src="../multimedia/scrollup.png" alt="scrollarriba"></a>
-      </div>
-        <!-- Boton Home redondito para volver denuevo al index -->
-       <a href="../index.html"><img class="homeboton" src="../multimedia/home.jpeg" alt="homebutton"></a>
+      </div> 
+         Boton Home redondito para volver denuevo al index  -->
+       <!-- <a href="../index.html"><img class="homeboton" src="../multimedia/home.jpeg" alt="homebutton"></a> 
+    </section> --> 
     </footer>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
