--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,19 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>About Me</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body class="bodyabout">
     <!-- HEADER Y SCROLL UP -->
-    <header id="about">
-        <h1>About Me</h1>
-        <h2>Julieta Sanzol digital Artist</h2>
+    <header >
+        <nav class="navbar navbar-expand-lg nav-colorback">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse nav-align" id="navbarNavDropdown" >
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/contact.html">contacts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/prices.html">prices</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/aboutme.html">aboutme</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/T.O.S.html ">t.o.s</a>
+                  </li>
+                  <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown link
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul> -->
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          </section>
     </header>
     <!-- FIN HEADER -->
-    <hr>
     <!-- MAIN / SECCIONES DE PARRAFO E IMAGENES -->
     <main>
+        <section id="about">
+            <h1>About Me</h1>
+            <h2>Julieta Sanzol digital Artist</h2>
+        </section>
       <article class="colorarti">
          <p class="colorarti-parrafo-about">
             My name is Julieta Sanzol, I am from Argentina, specifically Buenos Aires. I am 21 years old and have been drawing since 
@@ -33,7 +72,8 @@
          <section class="fotoarti">
              <img  class="fotoarti" src="../multimedia/img-aboutme/img1.gif" alt="lofigirl">
          </section>
-      </article> <hr>
+        </article> 
+        <hr>
         <section class="media-section-about">
             <img class="fotoarti2" src="../multimedia/img-aboutme/img2.gif" alt="chillgif">
             <p class="parrafoabout">
@@ -55,10 +95,10 @@
            <div class="box">
                <h2>Follow me!</h2>
                <div class="red-social">
-                   <a href="" class="logos-footer"><img class="logos-footer"s src="./multimedia/img-contacto/gmaillogo.png" alt=""></a>
-                   <a href="" class="logos-footer"><img class="logos-footer" src="./multimedia/img-contacto/Instagramlogo.png" alt=""></a>
-                   <a href="" class="logos-footer"><img class="logos-footer" src="./multimedia/img-contacto/Xlogo.png" alt=""></a>
-                   <a href="" class="logos-footer"><img class="logos-footer" src="./multimedia/img-contacto/Whatssapplogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer"s src="../multimedia/img-contacto/gmaillogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Instagramlogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Xlogo.png" alt=""></a>
+                   <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Whatssapplogo.png" alt=""></a>
                </div>
            </div>
          </div>
@@ -71,5 +111,6 @@
           </div> -->
         </footer>
     <!-- FIN FOOTER -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
