--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,16 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>contact</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body id="bodycontac">
     <!-- HEADER SIMPLE, SOLO TITULO -->
  <header>
-     <h1 class="titucontact">CONTACT</h1>
+    <nav class="navbar navbar-expand-lg nav-colorback">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse nav-align" id="navbarNavDropdown" >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contact.html">contacts</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/prices.html">prices</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/aboutme.html">aboutme</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/T.O.S.html ">t.o.s</a>
+              </li>
  </header> <hr class="con1"> <hr class="con2">
     <!-- Fin HEADER, COMINEZO MAIN -->
    <main>
+    <!-- ya se que esrta mal usar esto asi pero no se me ocurrio otra manera y queria probar una cosa (pd;podria hbaer hecho h2 ph3 y escalarlo con css pero no sabia si iba lograr lo que queria justamente) -->
+    <h1 class="titucontact">CONTACT</h1> 
+    <h1 class="titucontact">CONTACT</h1> 
+    <h1 class="titucontact">CONTACT</h1>
     <!-- navbar para los enlaces -->
      <nav class="navcontmain">
          <ul class="nopoint">
@@ -36,8 +62,29 @@
    </main> <hr>
    <!-- Fin de Main -->
    <!-- FOOTER SIMPLE / MISMO QUE VENIA HACIENDO EN LAS DEMAS PAGINAS-->
-    <footer class="homeboton1"> 
-        <a href="../index.html"><img class="homeboton" src="../multimedia/home.jpeg" alt="homeboton"></a>
+   <footer class="pie-pagina">
+    <div class="grupo-1">
+       <div class="box">
+       </div>
+       <div class="box">
+           <h2>about me</h2>
+           <p>Are you a beginner in digital illustration?if you want advice from my experience to start drawin<a class="rgbindex" href="">click here</a></p>
+           <p>Do you want us to collaborate togheter? <a class="rgbindex" href="">click here</a> for more information</p>
+       </div>
+       <div class="box">
+           <h2>Follow me!</h2>
+           <div class="red-social">
+               <a href="" class="logos-footer"><img class="logos-footer"s src="../multimedia/img-contacto/gmaillogo.png" alt=""></a>
+               <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Instagramlogo.png" alt=""></a>
+               <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Xlogo.png" alt=""></a>
+               <a href="" class="logos-footer"><img class="logos-footer" src="../multimedia/img-contacto/Whatssapplogo.png" alt=""></a>
+           </div>
+       </div>
+   </div>
+   <div class="grupo-2">
+       <small>&copy; 2021 <b>ArteJulietta</b> - Todos los Derechos Reservados.</small>
+   </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
